--- a/homepage/general.css
+++ b/homepage/general.css
@@ -23,6 +23,24 @@
 --pastel-green: rgba(92,220,156,1);
 --ocean-green: rgba(68,156,116,1); */
 
+/* CSS RESET */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* CSS GENERAL RULES */
+html {
+  /* Setting the root font size to 10px, to use it with responsive unites like rem */
+  font-size: 62%;
+}
+body {
+  font-family: "Inter", sans-serif;
+  font-family: "Rubik", sans-serif;
+  width: 100%;
+  overflow-x: hidden;
+}
 .heading-primary {
   text-align: center;
   padding: 4.2rem 0;
