--- a/homepage/mediaqueries.css
+++ b/homepage/mediaqueries.css
@@ -39,7 +39,7 @@
     align-items: center;
     justify-content: center;
     transition: all 0.5s ease-in;
-    z-index: 999999;
+    z-index: 1000;
 
     /* Hide navigation */
     /* Allows NO transitions at all */
@@ -93,5 +93,11 @@
   .third-col {
     border: none;
     text-align: center;
+  }
+  .cta {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .cta-form {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
