--- a/homepage/mediaqueries.css
+++ b/homepage/mediaqueries.css
@@ -79,7 +79,12 @@
   .main-nav-link:visited {
     font-size: 3rem;
   }
-
+  .heading-primary {
+    font-size: 2.1rem;
+  }
+  .slider .slider__btn {
+    display: none;
+  }
   .our-services {
     margin: 0 auto;
   }
@@ -96,8 +101,16 @@
   }
   .cta {
     grid-template-columns: repeat(1, 1fr);
+    justify-content: center;
   }
   .cta-form {
     grid-template-columns: repeat(1, 1fr);
+  }
+  .hide-on-phone {
+    display: none;
+  }
+  .about-us {
+    height: 120vh;
+    scroll-margin-top: 6rem;
   }
 }
