--- a/homepage/style.css
+++ b/homepage/style.css
@@ -1,4 +1,4 @@
-/* End styling  the header section */
+/* Start styling  the header section */
 .header {
   display: flex;
   justify-content: space-between;
@@ -28,10 +28,6 @@
   font-size: 1.8rem;
   gap: 4.8rem;
   align-items: center;
-}
-.nav-link:link,
-.nav-link:visited {
-  /* border-bottom: 2px solid #2cb474; */
 }
 
 .nav-link:hover,
@@ -95,6 +91,7 @@
   justify-content: center;
   transition: transform 1s;
 }
+/* Slides */
 
 .slide--1 {
   background-image: linear-gradient(
@@ -136,6 +133,7 @@
   border-radius: 50%;
   padding-left: 0.8rem;
   transform: translate(-50%, -50%);
+  opacity: 0.4;
 }
 .slider__btn--right {
   right: 6%;
@@ -190,38 +188,16 @@
 }
 .right-col {
   position: relative;
+  color: #333;
 }
-/* .right-col-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: rgba(44, 180, 117, 0.123);
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-} */
+
 .left-col {
   display: grid;
   place-items: center;
   position: relative;
-}
-.module {
-  padding: 1rem;
-  /* color: white; */
-  border-width: 3px;
-  border-style: solid;
-  border-image: linear-gradient(to right, #2cb474, rgba(0, 0, 0, 0)) 10 0%;
-}
-/* .about-us-img {
-  max-width: 100%;
-  transition: all 0.3s;
-  background-size: cover;
+  color: #333;
 }
 
-.right-col:hover .right-col-overlay {
-  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
-  opacity: 1;
-} */
 .about-us-paragraph {
   margin-bottom: 5rem;
   line-height: 1.6;
@@ -237,7 +213,7 @@
   font-size: 1.6rem;
   font-weight: 600;
   text-transform: uppercase;
-  color: #fff;
+  color: #333;
 }
 .animated-text {
   display: inline-block;
@@ -366,11 +342,21 @@
   position: relative;
   overflow: hidden;
   box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.08);
+  position: relative;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(244, 148, 30, 0.1);
+  z-index: 9999;
 }
 .our-team-card .card-image {
   transition: all 0.4s;
 }
-.our-team-card .card-image:hover {
+.our-team-card:hover .card-image {
   transform: scale(1.1);
   /* transform: scale3d(4deg); */
 }
@@ -401,24 +387,18 @@
 }
 /* End Team Section */
 
-/**************************/
 /* CTA SECTION */
-/**************************/
 
 .section-cta {
-  /* top / right / bottom / left */
-  /* padding: 9.6rem 0 12.8rem 0; */
-
-  /* top / horizontal / left */
   padding: 4.8rem 0 12.8rem;
   scroll-margin-top: 6rem;
 }
 
 .cta {
   display: grid;
-  /* 2/3 = 66.6% + 1/3 = 33.3% */
+
   grid-template-columns: 2fr 1fr;
-  /* background-color: #f4941e; */
+
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
   border-radius: 11px;
 
@@ -436,7 +416,6 @@
 }
 
 .cta .heading-secondary {
-  /* color: #45260a; */
   color: inherit;
   margin-bottom: 3.2rem;
 }
